# projetTech

gameText/: Makefile  game_aux.c  game_text  game_text.c
helloworld/: CMakeLists.txt  bar.c  helloworld
tsp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  convert-2D-to-full  solve-TSP
